--- a/ui/lib/less/ui.less
+++ b/ui/lib/less/ui.less
@@ -11,6 +11,14 @@
   font-style: normal;
 }
 
+@viewport {
+  min-zoom: 1;
+  max-zoom: 1;
+  zoom: 1;
+  width: device-width;
+  height: device-height;
+}
+
 // constants
 @fontsize: 14px;
 @gray: rgb(177,178,179);
