begin refactoring ui framework to comply with latest polymer practices

--- a/ui/lib/less/ui.less
+++ b/ui/lib/less/ui.less
@@ -30,8 +30,8 @@
 .float-left { float: left; }
 .float-right { float: right; }
 .error { color: red; }
-.horizontal-list { li { display: inline-block; } }
-.vertical-list { li { display: block; } }
+.ui-horizontal-list { li { display: inline-block; } }
+.ui-vertical-list { li { display: block; } }
 
 // default overrides
 * { color: rgb(96,96,96); }
