basic UI framework now works

--- a/ui/lib/src/components/ui-horizontal-list.html
+++ b/ui/lib/src/components/ui-horizontal-list.html
@@ -2,8 +2,15 @@
 <polymer-element name="ui-horizontal-list">
   <template>
     <ul class="ui-horizontal-list">
-      
+      <content></content> 
     </ul> 
+    
+    <style>
+      /* layout */
+      .ui-horizontal-list {
+          color: pink;
+      }
+    </style>
   </template>
   <script type="application/dart" src="ui_horizontal_list.dart"></script>
 </polymer-element>
