--- a/ui/lib/src/components/ui-vertical-list.html
+++ b/ui/lib/src/components/ui-vertical-list.html
@@ -2,8 +2,17 @@
 <polymer-element name="ui-vertical-list">
   <template>
     <ul class="ui-vertical-list">
-      
+      <content></content>
     </ul> 
+    
+    <style>
+      /* layout */
+      .ui-vertical-list {
+        li {
+          color: green;
+        }  
+      }
+    </style>
   </template>
   <script type="application/dart" src="ui_vertical_list.dart"></script>
 </polymer-element>
